# egaht

./: AGENT-1-DIRECTIVE.md  AGENT-1-PERFORMANCE-DASHBOARD.md  AGENT-1-STATUS-UPDATE-0647Z.md  AGENT-1-STATUS-UPDATE-0652Z.md  AGENT-2-ASSIGNMENT.md  AGENT-3-ASSIGNMENT.md  AGENT-4-ASSIGNMENT.md  AGENT-RANKING-BRUTAL-TRUTH.md  AGENT-TASK-ASSIGNMENTS.md  AGENT-TERMINATION-NOTICE.md  App.egh  BREAK-FREE-ROADMAP.md  CLAUDE.md  CSRF_PROTECTION_IMPLEMENTATION.md  DECOUPLING_FINAL_REPORT.md  DECOUPLING_REPORT.md  EMERGENCY-AGENT-PERFORMANCE-MEETING.md  EMERGENCY-TEAM-MEETING.md  FRAMEWORK-COMPLETION-REPORT.md  PHASE-3-STATUS-UPDATE.md  REACT_LIBERATION_TODO.md  README-NATIVE.md  README.md  SCRUM-MASTER-RESPONSE-TO-AGENT-1.md  SECURITY.md  SPRINT-WEEK-2-ASSIGNMENTS.md  SPRINT-WEEK-2-SECURITY-PERFORMANCE.md  SPRINT-WEEK-3-ADVANCED-FEATURES.md  SPRINT-WEEK-4-FINAL-PUSH.md  TASK_5.3_SECURITY_INTEGRATION_COMPLETE.md  XSS_PROTECTION_IMPLEMENTATION.md  build.js  demo-epkg-app.egh  demo.html  demo.sh  egh  eghact  eghact-native  eghact-production  eghact-standalone  (+11 more)
.taskmaster/: EMERGENCY-TEAM-MEETING.md  agent1-status.json  config.json  sprint-1.5-ssr-static.md  sprint-2.5-frontend-polish.md  state.json  worktree-status.json
adapters/: index.js
adaptive-ai/: Cargo.toml
adaptive-ai/src/: lib.rs
adaptive-ai/src/analyzer/: mod.rs
ai-component-generator/: README.md  SUBTASK-21.1-COMPLETE.md  SUBTASK-21.2-COMPLETE.md  SUBTASK-21.3-COMPLETE.md  SUBTASK-21.5-COMPLETE.md  package-lock.json  package.json  test-openrouter.js
ai-component-generator/rust/: Cargo.toml
ai-component-generator/rust/src/: lib.rs
awesome-app/: package.json
benchmarks/: build-performance.js  cli-startup.js
build-system/: package.json
cli/: eghact.js
cli-native/: Cargo.toml  README.md  build.sh
cli-native/src/: build_engine.rs  compiler.rs  config.rs  dev_server.rs  main.rs  utils.rs
cli-native/src/commands/: build.rs  create.rs  deploy.rs  dev.rs  doctor.rs  generate.rs  lint.rs  mod.rs  test.rs
cli-scaffolding/: package.json
codemod/: package.json
compiler/: Cargo.toml  README.md  egh-compiler.egh  egh-compiler.js
compiler/egh-compiler-v2/src/: codegen.egh  parser.egh
compiler/egh-parser/: cli.js  package-lock.json  package.json
compiler/egh-parser/src/: advanced-parser.js  ast-types.ts  codegen.ts  compiler.js  index.ts  lexer.ts  parser.js  tokenizer.js  transformer.js
compiler/egh-parser/test/: test-compiler.js
compiler/examples/: counter.egh
compiler/src/: ast_generator.rs  codegen.rs  component_parser.rs  csrf_protection.rs  main.rs  parser.rs  reactive_codegen.rs  reactivity.rs  style.rs  template.rs  template_codegen.rs  template_parser.rs  transformer.rs  typescript.rs  typescript_transform.rs
compiler/src/incremental/: benchmark.rs  cache.rs  compiler.rs  mod.rs
compiler/src/typescript/: mod.rs  parser.rs  prop_extractor.rs  state_inference.rs  type_checker.rs
compiler/tests/: compiler_test.rs  component_test.rs  parser_performance.rs  reactive_statements.rs  reactivity_test.egh  reactivity_test.rs  xss_protection_test.rs
database-adapters/: package.json
demo-app/: package.json
dev-server/: package-lock.json  package.json  server.js
devtools-extension/: CONTRIBUTING.md  README.md  manifest.json
docs/: Component-Testing-Guide.md  Content-Security-Policy-Guide.md  DevTools-Extension-Guide.md  Internationalization-Guide.md  PRD-Phase-3-Enterprise-Features.md  PRD-Sprint-Phase-2.md  Phase-3-Progress-Report.md  Phase-3-Sprint-Plan.md  Phase-3-Technical-Roadmap.md  Polish-Sprint-Tasks.md  Sprint-0.5-Completion-Report.md  Sprint-JSX-Replacement-PRD.md  TypeScript-Integration-Guide.md  TypeScript-Quick-Start.md  data-loading-spec.md  devtools-extension-guide.md  eg-file-format-spec.md  egh-syntax-readme.md  egh-syntax-spec.md  eghact-language-spec-v2.md  eghact-syntax-specification.md  eghql-specification.md  phase-3-completion-report.md
eghql/: eghql-advanced.js  eghql-core.egh  eghql-runtime.js  eghql-ultimate.js  example.eghql  playground.html
egpm/: Cargo.toml
egpm/src/: main.rs
enhanced-test/: package.json
epkg/: Cargo.toml  README.md  build.sh
epkg-demo/: .gitignore  epkg.json  index.html
epkg-js/: index.js
epkg/src/: cache.rs  installer.rs  lockfile.rs  main.rs  registry.rs  resolver.rs
examples/: advanced-app.egh  complete-syntax-test.egh  component-composition.egh  control-flow.egh  counter-new.egh  counter.egh  egh-showcase.egh  event-handlers.egh  secure-form-example.egh  store-counter.egh  todo-app.eg  todo-app.egh
incremental-compilation/: package.json
incremental-compiler/: README.md  package.json  tsconfig.json
locales/: en.json  es.json
mobile-adapters/: package.json
mobile-runtime/: CMakeLists.txt  README.md  build.sh
mobile-runtime/android/: EghactRuntime.java
mobile-runtime/examples/: counter_app.c
mobile-runtime/ios/: EghactViewController.m
mobile-runtime/src/: android_renderer.c  core.c  core.h  default_renderer.c  ios_renderer.m
my-app/: package.json
my-eghact-app/: package.json
my-new-app/: package.json
native-compiler/: Cargo.toml
native-compiler/src/: main.rs
native-db/: Cargo.toml
native-db/src/: lib.rs
native-ide/: README.md
native-server/: Cargo.toml
native-server/src/: main.rs
performance-monitor/: build.js  devtools-panel.css  devtools-panel.egh  eghact-perf-monitor-v2.egh  eghact-perf-monitor.egh  perf-runtime-hook.egh
playground/: README.md  package.json
plugin-architecture/: README.md  package.json
realtime-sync/: Cargo.toml
realtime-sync/src/: lib.rs
runtime/: Cargo.toml  README.md  build-wasm.js  build.sh  eghact_runtime.wasm  example.html  wasm-fallback.js
runtime-native/: Cargo.toml
runtime-native/src/: compiler.rs  dom.rs  eghql.rs  lib.rs  markdown.rs  reactive.rs
runtime-pure/: README-DECOUPLED.md  README.md  build-wasm.sh  build.js  dev-server.js  package.json
runtime/src/: lib.rs
runtime/tests/: size_test.js
scripts/: remove-package-json.sh
security/: threat-model.md
security-framework/: package.json
store/: package.json
super-fast-app/: egh  (+2 more)
(+354 files in other folders)
