[package]
name = "eghact-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Eghact Team"]
description = "AST-based compiler for Eghact framework"
license = "MIT"

[dependencies]
swc_core = { version = "0.87", features = ["ecma_parser", "ecma_ast", "ecma_visit", "ecma_utils", "ecma_codegen"] }
swc_ecma_parser = "0.143"
swc_common = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rust-crypto = "0.2"
regex = "1.10"

[dev-dependencies]
insta = "1.34"