[package]
name = "egpm"
version = "1.0.0"
edition = "2021"
authors = ["Eghact Core Team"]
description = "Eghact Package Manager - No NPM, No Node, Pure Native"

[[bin]]
name = "egpm"
path = "src/main.rs"

[dependencies]
# Core functionality
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# CLI and UI
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.1"

# Package management
semver = "1.0"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
blake3 = "1.5"

# Database and caching
rocksdb = "0.21"
sled = "0.34"

# Networking
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Security
ring = "0.17"
rustls = "0.22"
webpki = "0.22"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# File system
walkdir = "2.4"
notify = "6.1"
tempfile = "3.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true