[package]
name = "epkg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "epkg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
flate2 = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1.35", features = ["full"] }
semver = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1