[package]
name = "eghact-runtime"
version = "2.0.0"
edition = "2021"
authors = ["Eghact Core Team"]
description = "Native Eghact runtime - Zero Node.js, Pure Performance"

[dependencies]
# Core runtime
tokio = { version = "1.35", features = ["full"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Markdown & query processing  
pulldown-cmark = "0.9"
nom = "7.1"
sqlparser = "0.41"

# DOM manipulation
web-sys = { version = "0.3", features = [
  "Document",
  "Element", 
  "HtmlElement",
  "Window",
  "Event",
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent"
]}

# Native compilation
cranelift = "0.104"
wasmtime = "17.0"

# Data binding
dashmap = "5.5"
crossbeam = "0.8"

# Development features
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true